--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="downloading">Downloading…</string>
     <string name="title_file_download">File Download</string>
     <string name="title_button">Download</string>
-    <string name="storage_permission_denied">Permission denied</string>
-    <string name="storage_access_required">Storage access required</string>
+    <string name="permission_denied">Permission %s denied</string>
+    <string name="permission_required">Permission %s required</string>
+    <string name="permission_granted">Permission %s granted</string>
     <string name="ok">OK</string>
 </resources>
